=========

2019.1.0 (unreleased)
---------------------

- Add support for simple language codes in request language negotiation [lgraf]
- Fix typo in favorite error message. [njohner]
- Only display .docx files as possible proposal documents. [Rotonen]
- Fix task revoking permissions on close/reassign. [phgross]
- Fix an issue with missing zip after concurrent demand callback requests. [deiferni]
- Render mail descriptions as intelligent text on the mail overview. [Rotonen]
- Render document descriptions as intelligent text on the Bumblebee overlay. [Rotonen]
- Render document descriptions as intelligent text on the document overview. [Rotonen]


2018.5.4 (2018-12-06)
---------------------

- Add missing changed index to solr and fix tabbedview helper fallback. [phgross]
- Bump docxcompose to 1.0.0a14 for better handling of referenced parts. [deiferni]
- Fix filesize, filename and file extension upgradestep for deployments using solr. [phgross]
- Fix an issue with meeting template titles. [deiferni]


2018.5.3 (2018-11-29)
---------------------

- Bump ftw.bumblebee to 3.7.1 to get fix to avoid calculating all indexed on document update. [lgraf]


2018.5.2 (2018-11-28)
---------------------

- Fix bug in favorites to support objects with long titles. [njohner]
- Return review_state ID in API summaries and introduce a new review_state_label attribute instead. [phgross]
- Fix quotation error and missing translations for task and dossier PDFs. [njohner]
- Make ReindexTaskPrincipalsInGlobalindex upgradestep more robust. [phgross]
- Show one line of each title and description in livesearch result. [njohner]


2018.5.1 (2018-11-23)
---------------------

- Update the changed date upgrade step. [jone]


2018.5.0 (2018-11-23)
---------------------

- Open notifications for resources on a foreign admin_unit in a new tab/window. [phgross]
- Fix bug in Windows8/10 and IE11/Edge: Select a task-reminder option will now properly stop spinning. [elioschmutz]